k8s/new-cluster/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taxonworks
  labels:
    name: taxonworks
