k8s/new-cluster/base/app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: taxonworks
  labels:
    app: taxonworks
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: taxonworks
    tier: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxonworks
  labels:
    app: taxonworks
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: taxonworks
      tier: frontend
  template:
    metadata:
      labels:
        app: taxonworks
        tier: frontend
    spec:
      volumes:
        - name: taxonworks-media-vol
          persistentVolumeClaim:
            claimName: taxonworks-media-pv-claim
        - name: taxonworks-backup-vol
          persistentVolumeClaim:
            claimName: taxonworks-backup-pv-claim
        - name: taxonworks-staging-vol
          persistentVolumeClaim:
            claimName: taxonworks-staging-pv-claim
      containers:
        - name: taxonworks
          image: sfgrp/taxonworks:0.3.12
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /app/public/system
              name: taxonworks-media-vol
            - mountPath: /backup
              name: taxonworks-backup-vol
            - mountPath: /staging
              name: taxonworks-staging-vol
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "2"
